# serializer version: 1
# name: test_decode_rpc_payload[app_get_init_status2]
  23607
# ---
# name: test_decode_rpc_payload[app_get_init_status2].1
  '''
  [
    {
      "local_info": {
        "name": "custom_A.03.0096_FCC",
        "bom": "A.03.0096",
        "location": "us",
        "language": "en",
        "wifiplan": "US",
        "timezone": "US/Pacific",
        "logserver": "awsusor0.fds.api.xiaomi.com",
        "featureset": 1
      },
      "feature_info": [
        111,
        112,
        113,
        114,
        115,
        116,
        117,
        118,
        119,
        120,
        121,
        122,
        123,
        124,
        125
      ],
      "new_feature_info": 10738169343,
      "status_info": {
        "state": 8,
        "battery": 100,
        "clean_time": 251,
        "clean_area": 3847500,
        "error_code": 0,
        "in_cleaning": 0,
        "in_returning": 0,
        "in_fresh_state": 1,
        "lab_status": 3,
        "water_box_status": 0,
        "map_status": 7,
        "is_locating": 0,
        "lock_status": 0,
        "water_box_mode": 203,
        "distance_off": 0,
        "water_box_carriage_status": 0,
        "mop_forbidden_enable": 0,
        "camera_status": 3495,
        "is_exploring": 0,
        "home_sec_status": 0,
        "home_sec_enable_password": 1,
        "adbumper_status": [
          0,
          0,
          0
        ]
      }
    }
  ]
  '''
# ---
# name: test_decode_rpc_payload[app_get_init_status]
  20001
# ---
# name: test_decode_rpc_payload[app_get_init_status].1
  '''
  [
    {
      "local_info": {
        "name": "custom_A.03.0069_FCC",
        "bom": "A.03.0069",
        "location": "us",
        "language": "en",
        "wifiplan": "0x39",
        "timezone": "US/Pacific",
        "logserver": "awsusor0.fds.api.xiaomi.com",
        "featureset": 1
      },
      "feature_info": [
        111,
        112,
        113,
        114,
        115,
        116,
        117,
        118,
        119,
        120,
        122,
        123,
        124,
        125
      ],
      "new_feature_info": 633887780925447,
      "new_feature_info2": 8192,
      "new_feature_info_str": "0000000000002000",
      "status_info": {
        "state": 8,
        "battery": 100,
        "clean_time": 5610,
        "clean_area": 96490000,
        "error_code": 0,
        "in_cleaning": 0,
        "in_returning": 0,
        "in_fresh_state": 1,
        "lab_status": 1,
        "water_box_status": 0,
        "map_status": 3,
        "is_locating": 0,
        "lock_status": 0,
        "water_box_mode": 204,
        "distance_off": 0,
        "water_box_carriage_status": 0,
        "mop_forbidden_enable": 0
      }
    }
  ]
  '''
# ---
# name: test_decode_rpc_payload[get_clean_summary]
  20001
# ---
# name: test_decode_rpc_payload[get_clean_summary].1
  '''
  [
    1442559,
    24258125000,
    296,
    [
      1756848207,
      1754930385,
      1753203976,
      1752183435,
      1747427370,
      1746204046,
      1745601543,
      1744387080,
      1743528522,
      1742489154,
      1741022299,
      1740433682,
      1739902516,
      1738875106,
      1738864366,
      1738620067,
      1736873889,
      1736197544,
      1736121269,
      1734458038
    ]
  ]
  '''
# ---
# name: test_decode_rpc_payload[get_consumeables]
  20001
# ---
# name: test_decode_rpc_payload[get_consumeables].1
  '''
  [
    {
      "main_brush_work_time": 879348,
      "side_brush_work_time": 707618,
      "filter_work_time": 738722,
      "filter_element_work_time": 0,
      "sensor_dirty_time": 455517
    }
  ]
  '''
# ---
# name: test_decode_rpc_payload[get_dnd]
  20002
# ---
# name: test_decode_rpc_payload[get_dnd].1
  '''
  [
    {
      "start_hour": 22,
      "start_minute": 0,
      "end_hour": 8,
      "end_minute": 0,
      "enabled": 1
    }
  ]
  '''
# ---
# name: test_decode_rpc_payload[get_last_clean_record]
  20003
# ---
# name: test_decode_rpc_payload[get_last_clean_record].1
  '''
  [
    [
      1738864366,
      1738868964,
      4358,
      81122500,
      0,
      0,
      1,
      1,
      21
    ]
  ]
  '''
# ---
# name: test_decode_rpc_payload[get_multi_maps_list]
  20001
# ---
# name: test_decode_rpc_payload[get_multi_maps_list].1
  '''
  [
    {
      "max_multi_map": 1,
      "max_bak_map": 1,
      "multi_map_count": 1,
      "map_info": [
        {
          "mapFlag": 0,
          "add_time": 1747132930,
          "length": 0,
          "name": "",
          "bak_maps": [
            {
              "mapFlag": 4,
              "add_time": 1747132936
            }
          ]
        }
      ]
    }
  ]
  '''
# ---
# name: test_decode_rpc_payload[get_room_mapping2]
  20001
# ---
# name: test_decode_rpc_payload[get_room_mapping2].1
  '''
  [
    [
      16,
      "2537178",
      6
    ],
    [
      17,
      "2537175",
      14
    ],
    [
      18,
      "2537174",
      13
    ],
    [
      19,
      "2537176",
      14
    ],
    [
      20,
      "10655627",
      12
    ],
    [
      21,
      "2537145",
      2
    ],
    [
      22,
      "2537147",
      12
    ]
  ]
  '''
# ---
# name: test_decode_rpc_payload[get_room_mapping]
  20001
# ---
# name: test_decode_rpc_payload[get_room_mapping].1
  '''
  [
    [
      16,
      "3031886"
    ],
    [
      17,
      "3031880"
    ],
    [
      18,
      "3031883"
    ]
  ]
  '''
# ---
# name: test_decode_rpc_payload[get_status]
  20001
# ---
# name: test_decode_rpc_payload[get_status].1
  '''
  [
    {
      "msg_ver": 2,
      "msg_seq": 515,
      "state": 8,
      "battery": 100,
      "clean_time": 5405,
      "clean_area": 91287500,
      "error_code": 0,
      "map_present": 1,
      "in_cleaning": 0,
      "in_returning": 0,
      "in_fresh_state": 1,
      "lab_status": 1,
      "water_box_status": 0,
      "fan_power": 106,
      "dnd_enabled": 1,
      "map_status": 3,
      "is_locating": 0,
      "lock_status": 0,
      "water_box_mode": 204,
      "distance_off": 0,
      "water_box_carriage_status": 0,
      "mop_forbidden_enable": 0,
      "unsave_map_reason": 4,
      "unsave_map_flag": 0
    }
  ]
  '''
# ---
# name: test_decode_rpc_payload[get_volume]
  20001
# ---
# name: test_decode_rpc_payload[get_volume].1
  '''
  [
    90
  ]
  '''
# ---
